--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 </ul>
 
                 <div class="navigation">
-                    <a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
-                    <a href="/plan.html" id="dailyResult" style="color: yellow;">PLAN & EVENTS</a>
+                    <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
+                    <a class="anchor plan-and-event" href="/plan.html" id="planAndEvent">PLAN & EVENTS</a>
                     <span class="merry-christmas">Merry Christmas</span>
                     <!-- <button class="buy-lrCard">Buy LR Card</button> -->
                 </div> 
@@ -95,73 +95,73 @@
                         <iframe title="Mark-2 results board" scrolling="no" src="./GAMES/2Mark-II.html"></iframe>
                     </div> 
                     <div class="frame" tabindex="0"> 
-                        <iframe scrolling="no" src="./GAMES/3Enugu.html"></iframe>
+                        <iframe title="Enugu results board" scrolling="no" src="./GAMES/3Enugu.html"></iframe>
                     </div>
                     <div class="frame" tabindex="0"> 
-                        <iframe scrolling="no" src="./GAMES/4Lucky.html"></iframe>
+                        <iframe title="premier lucky results board" scrolling="no" src="./GAMES/4Lucky.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/5Tota.html"></iframe>
+                        <iframe title="Tota results board" scrolling="no" src="./GAMES/5Tota.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/6Diamond.html"></iframe>
+                        <iframe title="Diamond results board" scrolling="no" src="./GAMES/6Diamond.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/7People.html"></iframe>
+                        <iframe title="People results board" scrolling="no" src="./GAMES/7People.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/8Bingo.html"></iframe>
+                        <iframe title="Bingo results board" scrolling="no" src="./GAMES/8Bingo.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/9Metro.html"></iframe>
+                        <iframe title="Metro results board" scrolling="no" src="./GAMES/9Metro.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/10Inter.html"></iframe>
+                        <iframe title="International results board" scrolling="no" src="./GAMES/10Inter.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/11Gold.html"></iframe>
+                        <iframe title="premier Gold results board" scrolling="no" src="./GAMES/11Gold.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/12O6.html"></iframe>
+                        <iframe title="o6 results board" scrolling="no" src="./GAMES/12O6.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/13Jackpot.html"></iframe>
+                        <iframe title="Jackpot results board" scrolling="no" src="./GAMES/13Jackpot.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/14Club-m.html"></iframe>
+                        <iframe title="Club Master results board" scrolling="no" src="./GAMES/14Club-m.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/15Super.html"></iframe>
+                        <iframe title="Super results board" scrolling="no" src="./GAMES/15Super.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/16Vag.html"></iframe>
+                        <iframe title="Vag results board" scrolling="no" src="./GAMES/16Vag.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/17Fair-c.html"></iframe>
+                        <iframe title="Fair Chance results board" scrolling="no" src="./GAMES/17Fair-c.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/18Aseda.html"></iframe>
+                        <iframe title="Aseda results board" scrolling="no" src="./GAMES/18Aseda.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/19MSP.html"></iframe>
+                        <iframe title="Monday Special results board" scrolling="no" src="./GAMES/19MSP.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/20LUCKY-G.html"></iframe> 
+                        <iframe title="Ghana Lucky G results board" scrolling="no" src="./GAMES/20LUCKY-G.html"></iframe> 
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/21Midweek.html"></iframe>
+                        <iframe title="Ghana Midweek results board" scrolling="no" src="./GAMES/21Midweek.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/22Fortune.html"></iframe>   
+                        <iframe title="Ghana Fortune results board" scrolling="no" src="./GAMES/22Fortune.html"></iframe>   
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/23Bonanza.html"></iframe> 
+                        <iframe title="friday Bonanza results board" scrolling="no" src="./GAMES/23Bonanza.html"></iframe> 
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/24King.html"></iframe> 
+                        <iframe title="premier King results board" scrolling="no" src="./GAMES/24King.html"></iframe> 
                     </div>
                     <div class="frame">
-                        <iframe scrolling="no" src="./GAMES/25National.html"></iframe> 
+                        <iframe title="Ghana National results board" scrolling="no" src="./GAMES/25National.html"></iframe> 
                     </div>
                 </div>
             </section>
@@ -199,25 +199,28 @@
                 </div>
                 <div class="stayConnected">
                     <span>Stay connected</span>
-                    <a href="https://twitter.com/hologutiBcentre" target="_blank" aria-label="Visit our X Page "><i class="fa-brands fa-square-x-twitter"></i></a>
-                    <a href="https://www.facebook.com/hologutiBusines" target="_blank" aria-level="Visit our facebook Page"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://m.me/109930914660224" target="_blank" aria-label="Visit our Messenger handle to Chat Us"><i class="fa-brands fa-facebook-messenger"></i></a>
-                    <a href="https://www.instagram.com/hologutibusines/" target="_blank" aria-label="Visit Our instagram Page"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://twitter.com/hologutiBcentre" target="_blank"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
+                    <a href="https://www.facebook.com/hologutiBusines" target="_blank"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
+                    <a href="https://m.me/109930914660224" target="_blank"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
+                    <a href="https://www.instagram.com/hologutibusines/" target="_blank"><i class="fa-brands fa-instagram"  aria-label="connect on Our instagram Page"></i></a>
                 </div>
             </div>
-        </footer> 
-        <script src="script.js"></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
-        <!-- Source -->
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-3639147338737274"
-            data-ad-slot="9690547982"
-            data-ad-format="auto"
-            data-full-width-responsive="true"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        </footer>
+        <div class="goggleAd" aria-hidden="true" tabindex="-1">
+            <script src="script.js"></script>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
+            <!-- Source -->
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-3639147338737274"
+                data-ad-slot="9690547982"
+                data-ad-format="auto"
+                data-full-width-responsive="true">
+            </ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div> 
     </body>
 </html>
         
