--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,35 +179,6 @@
     <div class="gameResults">
         <span>&#127876</span>
         <section aria-label="two days ago result">
-            <h2 class="date">tuesday 26/12/2023</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">54 - 50 - 52 - 9 - 21</p>
-                <p class="machine">2 - 30 - 78 - 31 - 88</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">90 - 6 - 72 - 35 - 70</p>
-                <p class="machine">14 - 64 - 89 - 74 - 79</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">30 - 71 - 66 - 42 - 55</p>
-                <p class="machine">6 - 43 - 26 - 51 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">75 - 52 - 10 - 83 - 26</p>
-                <p class="machine">41 - 84 - 74 - 79 - 31</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">84 - 42 - 80 - 16 - 40</p>
-                <p class="machine">85 - 77 - 65 - 32 - 75</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">wednesday 27/12/2023</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -243,6 +214,40 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">19 - 83 - 27 - 71 - 29</p>
                 <p class="machine">36 - 82 - 49 - 9 - 20</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 28/12/2023</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">31 - 5 - 68 - 7 - 15</p>
+                <p class="machine">54 - 51 - 41 - 78 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">45 - 17 - 51 - 18 - 20</p>
+                <p class="machine">81 - 1 - 76 - 16 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">44 - 61 - 46 - 9 - 11</p>
+                <p class="machine">85 - 86 - 6 - 84 - 62</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">51 - 66 - 40 - 23 - 69</p>
+                <p class="machine">10 - 21 - 12 - 20 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">59 - 77 - 69 - 51 - 64</p>
+                <p class="machine">73 - 8 - 37 - 33 - 60</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">21 - 14 - 88 - 11 - 27</p>
+                <p class="machine">55 - 12 - 51 - 40 - 16</p>        
             </article>
         </section>
 
