--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,45 +179,6 @@
     <div class="gameResults">
         <span>&#127876</span>
         <section aria-label="two days ago result">
-            <h2 class="date">wednesday 27/12/2023</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">57 - 30 - 82 - 39 - 56</p>
-                <p class="machine">36 - 44 - 80 - 40 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">6 - 60 - 18 - 24 - 8</p>
-                <p class="machine">57 - 33 - 53 - 82 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">86 - 85 - 12 - 23 - 90</p>
-                <p class="machine">75 - 35 - 56 - 30 - 63</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">23 - 1 - 16 - 32 - 49</p>
-                <p class="machine">66 - 53 - 80 - 18 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">41 - 48 - 11 - 29 - 6</p>
-                <p class="machine">30 - 62 - 63 - 39 - 27</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">81 - 85 - 52 - 22 - 69</p>
-                <p class="machine">84 - 58 - 14 - 5 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">19 - 83 - 27 - 71 - 29</p>
-                <p class="machine">36 - 82 - 49 - 9 - 20</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday 28/12/2023</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -248,6 +209,40 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">21 - 14 - 88 - 11 - 27</p>
                 <p class="machine">55 - 12 - 51 - 40 - 16</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 29/12/2023</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">36 - 46 - 21 - 49 - 58</p>
+                <p class="machine">32 - 44 - 8 - 45 - 78</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">22 - 27 - 26 - 78 - 19</p>
+                <p class="machine">45 - 30 - 58 - 74 - 20</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">39 - 8 - 23 - 24 - 1</p>
+                <p class="machine">29 - 33 - 34 - 78 - 67</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">42 - 50 - 36 - 76 - 53</p>
+                <p class="machine">70 - 35 - 19 - 30 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">12 - 49 - 80 - 6 - 71</p>
+                <p class="machine">57 - 75 - 11 - 69 - 62</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">2 - 72 - 28 - 35 - 87</p>
+                <p class="machine">22 - 5 - 32 - 78 - 51</p>        
             </article>
         </section>
 
