--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </main>
         <footer>
             <small>Created & Manage <br> By <br> Hologuti Business Centre</small>
-            <img src="https://i.postimg.cc/x1YB05Sf/hbc-logo-180.png" aria-hidden="true">
+            <a href="https://hologutibusinesscentre.com" target="_blank"><img src="https://i.postimg.cc/x1YB05Sf/hbc-logo-180.png" aria-hidden="true"></a>
             <!-- <span>&copy;2023 Hologuti Business Centre - All Rights Reserved</span>   -->
             <div class="contentInfo-wrapper">
                 <a href="#" class="team">Team</a>
