--- a/GAMES/13Jackpot.html
+++ b/GAMES/13Jackpot.html
@@ -607,7 +607,7 @@
             <tbody>
                 <tr>
                     <td class="serial-num">27</td>
-                    <td class="days"><small>fri 29th Dec</small></td>
+                    <td class="days"><small></small></td>
                 
                     <!-- winning-->
                     <td class="winning"></td>
