--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,40 +179,6 @@
     <div class="gameResults">
         <span>&#127876</span>
         <section aria-label="two days ago result">
-            <h2 class="date">thursday 28/12/2023</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">31 - 5 - 68 - 7 - 15</p>
-                <p class="machine">54 - 51 - 41 - 78 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">45 - 17 - 51 - 18 - 20</p>
-                <p class="machine">81 - 1 - 76 - 16 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">44 - 61 - 46 - 9 - 11</p>
-                <p class="machine">85 - 86 - 6 - 84 - 62</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">51 - 66 - 40 - 23 - 69</p>
-                <p class="machine">10 - 21 - 12 - 20 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">59 - 77 - 69 - 51 - 64</p>
-                <p class="machine">73 - 8 - 37 - 33 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">21 - 14 - 88 - 11 - 27</p>
-                <p class="machine">55 - 12 - 51 - 40 - 16</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">friday 29/12/2023</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -243,6 +209,40 @@
                 <h3 class="game">vag</h3>
                 <p class="winning">2 - 72 - 28 - 35 - 87</p>
                 <p class="machine">22 - 5 - 32 - 78 - 51</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 30/12/2023</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">36 - 84 - 25 - 58 - 62</p>
+                <p class="machine">77 - 27 - 44 - 67 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">43 - 38 - 23 - 18 - 46</p>
+                <p class="machine">8 - 52 - 15 - 80 - 71</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">22 - 66 - 39 - 67 - 3</p>
+                <p class="machine">80 - 65 - 12 - 13 - 44</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">55 - 4 - 62 - 46 - 86</p>
+                <p class="machine">72 - 9 - 79 - 75 - 78</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">83 - 64 - 8 - 15 - 27</p>
+                <p class="machine">79 - 76 - 43 - 30 - 85</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">14 - 6 - 37 - 36 - 84</p>
+                <p class="machine">3 - 21 - 89 - 8 - 47</p>        
             </article>
         </section>
 
