--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 </ul>
 
                 <div class="navigation">
+                    <canvas id="fireworks"></canvas>
                     <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
                     <a class="anchor plan-and-event" href="/plan.html" id="planAndEvent">PLAN & EVENTS</a>
                     <span class="merry-christmas">Merry Christmas</span>
