--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -209,40 +209,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">saturday 30/12/2023</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">36 - 84 - 25 - 58 - 62</p>
-                <p class="machine">77 - 27 - 44 - 67 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">43 - 38 - 23 - 18 - 46</p>
-                <p class="machine">8 - 52 - 15 - 80 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">22 - 66 - 39 - 67 - 3</p>
-                <p class="machine">80 - 65 - 12 - 13 - 44</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">55 - 4 - 62 - 46 - 86</p>
-                <p class="machine">72 - 9 - 79 - 75 - 78</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">83 - 64 - 8 - 15 - 27</p>
-                <p class="machine">79 - 76 - 43 - 30 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">14 - 6 - 37 - 36 - 84</p>
-                <p class="machine">3 - 21 - 89 - 8 - 47</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 31/12/2023</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -273,6 +239,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">2 - 29 - 61 - 66 - 16</p>
                 <p class="machine">56 - 48 - 08 - 70 - 60</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 1/1/2024</h2>
+            <article>
+                <h3 class="game">happy <br>New <br>Year</h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">36 - 14 - 12 - 81 - 38</p>
+                <p class="machine">74 - 25 - 56 - 63 - 57</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">75 - 73 - 80 - 66 - 48</p>
+                <p class="machine">57 - 9 - 5 - 13 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">76 - 44 - 43 - 67 - 7</p>
+                <p class="machine">31 - 23 - 46 - 40 - 84</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">23 - 30 - 88 - 39 - 79</p>
+                <p class="machine">45 - 38 - 8 - 2 - 53</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">37 - 30 - 70 - 21 - 86</p>
+                <p class="machine">45 - 85 - 65 - 50 - 75</p>        
             </article>
         </section>
 
