--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="getInTouch">
                     <span>Get in Touch</span>
                     <a href="tel:+2349058206578">09058206578</a>
-                    <a href="mailto:vlb.hologutibusinesscentre.com">vlb.hologutibusinesscentre.com</a>
+                    <a href="mailto:vlb@hologutibusinesscentre.com">vlb@hologutibusinesscentre.com</a>
                 </div>
                 <div class="stayConnected">
                     <span>Stay connected</span>
