--- a/GAMES/7People.html
+++ b/GAMES/7People.html
@@ -567,7 +567,7 @@
             <tbody>
                 <tr>
                     <td class="line">y</td>
-                    <td class="days"><small>mon 25th Dec  <br> <span class="xMas-tree">&#127876</span></small></td>
+                    <td class="days"><small>mon 25th Dec  <br> <span class="xMas-tree">&#127876;</span></small></td>
                 
                     <!-- winning-->
                     <td class="winning">87</td>
