--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -7,35 +7,6 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
     <style>
-        body {
-      margin: 0;
-      /* overflow: hidden; */
-      background-color: #000;
-    }
-
-    .firework {
-      position: absolute;
-      /* width: 6px;
-      height: 6px; */
-      /* background-color: #fff; */
-      /* border-radius: 50%; */
-      opacity: 0;
-      animation: explode 1s ease-out; 
-    }
-    .firework::after {
-        content: "\1F387";
-    }
-
-    @keyframes explode {
-      0% {
-        transform: scale(1);
-        opacity: 1;
-      }
-      100% {
-        transform: scale(20);
-        opacity: 0;
-      }
-    } 
         header {
             margin: 2rem;
             text-align: center;
@@ -71,7 +42,6 @@
         } 
         .game {
             color: #000; 
-            color: #fff;
             text-decoration: underline;
             text-transform: uppercase;
         }
@@ -209,46 +179,7 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">sunday 31/12/2023</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">47 - 4 - 58 - 6 - 32</p>
-                <p class="machine">83 - 89 - 26 - 48 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">33 - 48 - 56 - 6 - 87</p>
-                <p class="machine">71 - 66 - 24 - 4 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">33 - 31 - 16 - 49 - 86</p>
-                <p class="machine">75 - 9 - 20 - 57 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">17 - 89 - 70 - 33 - 61</p>
-                <p class="machine">44 - 4 - 81 - 63 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">78 - 60 - 33 - 3 - 28</p>
-                <p class="machine">37 - 54 - 51 - 42 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">2 - 29 - 61 - 66 - 16</p>
-                <p class="machine">56 - 48 - 08 - 70 - 60</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">monday 1/1/2024</h2>
-            <article>
-                <h3 class="game">happy <br>New <br>Year</h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
             <article>
                 <h3 class="game">Diamond</h3>
                 <p class="winning">36 - 14 - 12 - 81 - 38</p>
@@ -275,6 +206,46 @@
                 <p class="machine">45 - 85 - 65 - 50 - 75</p>        
             </article>
         </section>
+
+                    <!-- second-->
+        <section aria-label="yesterday result">
+        <h2 class="date">tuesday 2/1/2024</h2>
+        <article>
+            <h3 class="game">Gold</h3>
+            <p class="winning">74 - 1 - 9 - 46 - 52</p>
+            <p class="machine">8 - 27 - 72 - 21 - 61</p>        
+        </article>
+        <article>
+            <h3 class="game">06</h3>
+            <p class="winning">87 - 60 - 17 - 57 - 65</p>
+            <p class="machine">16 - 76 - 10 - 1 - 22</p>        
+        </article>
+        <article>
+            <h3 class="game">Jackpot</h3>
+            <p class="winning">63 - 59 - 43 - 62 - 13</p>
+            <p class="machine">28 - 27 - 79 - 56 - 47</p>        
+        </article>
+        <article>
+            <h3 class="game">Club Master</h3>
+            <p class="winning">51 - 23 - 71 - 34 - 87</p>
+            <p class="machine">12 - 66 - 83 - 60 - 47</p>        
+        </article>
+        <article>
+            <h3 class="game">LUCKY-G</h3>
+            <p class="winning">55 - 4 - 88 - 79 - 5</p>
+            <p class="machine">77 - 8 - 56 - 63 - 31</p>        
+        </article>
+        <article>
+            <h3 class="game">MSP</h3>
+            <p class="winning">8 - 4 - 54 - 79 - 19</p>
+            <p class="machine">90 - 77 - 44 - 40 - 70</p>        
+        </article>
+        <article>
+            <h3 class="game">Super</h3>
+            <p class="winning">18 - 19 - 68 - 86 - 17</p>
+            <p class="machine">90 - 8 - 44 - 63 - 89</p>        
+        </article>
+    </section>
 
       
 
