--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,75 +179,78 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">monday 1/1/2024</h2>
+            <h2 class="date">tuesday 2/1/2024</h2>
             <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">36 - 14 - 12 - 81 - 38</p>
-                <p class="machine">74 - 25 - 56 - 63 - 57</p>        
+                <h3 class="game">Gold</h3>
+                <p class="winning">74 - 1 - 9 - 46 - 52</p>
+                <p class="machine">8 - 27 - 72 - 21 - 61</p>        
             </article>
             <article>
-                <h3 class="game">People</h3>
-                <p class="winning">75 - 73 - 80 - 66 - 48</p>
-                <p class="machine">57 - 9 - 5 - 13 - 6</p>        
+                <h3 class="game">06</h3>
+                <p class="winning">87 - 60 - 17 - 57 - 65</p>
+                <p class="machine">16 - 76 - 10 - 1 - 22</p>        
             </article>
             <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">76 - 44 - 43 - 67 - 7</p>
-                <p class="machine">31 - 23 - 46 - 40 - 84</p>        
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">63 - 59 - 43 - 62 - 13</p>
+                <p class="machine">28 - 27 - 79 - 56 - 47</p>        
             </article>
             <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">23 - 30 - 88 - 39 - 79</p>
-                <p class="machine">45 - 38 - 8 - 2 - 53</p>        
+                <h3 class="game">Club Master</h3>
+                <p class="winning">51 - 23 - 71 - 34 - 87</p>
+                <p class="machine">12 - 66 - 83 - 60 - 47</p>        
             </article>
             <article>
-                <h3 class="game">International</h3>
-                <p class="winning">37 - 30 - 70 - 21 - 86</p>
-                <p class="machine">45 - 85 - 65 - 50 - 75</p>        
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">55 - 4 - 88 - 79 - 5</p>
+                <p class="machine">77 - 8 - 56 - 63 - 31</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">8 - 4 - 54 - 79 - 19</p>
+                <p class="machine">90 - 77 - 44 - 40 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">18 - 19 - 68 - 86 - 17</p>
+                <p class="machine">90 - 8 - 44 - 63 - 89</p>        
             </article>
         </section>
 
-                    <!-- second-->
+                                <!-- Second-->
         <section aria-label="yesterday result">
-        <h2 class="date">tuesday 2/1/2024</h2>
-        <article>
-            <h3 class="game">Gold</h3>
-            <p class="winning">74 - 1 - 9 - 46 - 52</p>
-            <p class="machine">8 - 27 - 72 - 21 - 61</p>        
-        </article>
-        <article>
-            <h3 class="game">06</h3>
-            <p class="winning">87 - 60 - 17 - 57 - 65</p>
-            <p class="machine">16 - 76 - 10 - 1 - 22</p>        
-        </article>
-        <article>
-            <h3 class="game">Jackpot</h3>
-            <p class="winning">63 - 59 - 43 - 62 - 13</p>
-            <p class="machine">28 - 27 - 79 - 56 - 47</p>        
-        </article>
-        <article>
-            <h3 class="game">Club Master</h3>
-            <p class="winning">51 - 23 - 71 - 34 - 87</p>
-            <p class="machine">12 - 66 - 83 - 60 - 47</p>        
-        </article>
-        <article>
-            <h3 class="game">LUCKY-G</h3>
-            <p class="winning">55 - 4 - 88 - 79 - 5</p>
-            <p class="machine">77 - 8 - 56 - 63 - 31</p>        
-        </article>
-        <article>
-            <h3 class="game">MSP</h3>
-            <p class="winning">8 - 4 - 54 - 79 - 19</p>
-            <p class="machine">90 - 77 - 44 - 40 - 70</p>        
-        </article>
-        <article>
-            <h3 class="game">Super</h3>
-            <p class="winning">18 - 19 - 68 - 86 - 17</p>
-            <p class="machine">90 - 8 - 44 - 63 - 89</p>        
-        </article>
-    </section>
-
-      
+            <h2 class="date">wednesday 3/1/2023</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">72 - 77 - 56 - 62 - 49</p>
+                <p class="machine">16 - 5 - 65 - 30 - 12</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">63 - 23 - 53 - 40 - 77</p>
+                <p class="machine">86 - 47 - 35 - 22 - 75</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">65 - 63 - 3 - 35 - 12</p>
+                <p class="machine">57 - 4 - 56 - 8 - 68</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">2 - 14 - 35 - 84 - 23</p>
+                <p class="machine">5 - 22 - 9 - 44 - 77</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">29 - 14 - 53 - 61 - 85</p>
+                <p class="machine">46 - 38 - 80 - 86 - 71</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">7 - 18 - 39 - 75 - 61</p>
+                <p class="machine">14 - 25 - 58 - 60 - 82</p>        
+            </article>
+        </section>
 
     </div>
     
