--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,46 +179,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">tuesday 2/1/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">74 - 1 - 9 - 46 - 52</p>
-                <p class="machine">8 - 27 - 72 - 21 - 61</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">87 - 60 - 17 - 57 - 65</p>
-                <p class="machine">16 - 76 - 10 - 1 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">63 - 59 - 43 - 62 - 13</p>
-                <p class="machine">28 - 27 - 79 - 56 - 47</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">51 - 23 - 71 - 34 - 87</p>
-                <p class="machine">12 - 66 - 83 - 60 - 47</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">55 - 4 - 88 - 79 - 5</p>
-                <p class="machine">77 - 8 - 56 - 63 - 31</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">8 - 4 - 54 - 79 - 19</p>
-                <p class="machine">90 - 77 - 44 - 40 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">18 - 19 - 68 - 86 - 17</p>
-                <p class="machine">90 - 8 - 44 - 63 - 89</p>        
-            </article>
-        </section>
-
-                                <!-- Second-->
-        <section aria-label="yesterday result">
             <h2 class="date">wednesday 3/1/2023</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -251,6 +211,40 @@
                 <p class="machine">14 - 25 - 58 - 60 - 82</p>        
             </article>
         </section>
+
+        <section>
+        <h2 class="date">thursday 4/1/2024</h2>
+        <article>
+            <h3 class="game">People</h3>
+            <p class="winning">59 - 32 - 44 - 20 - 5</p>
+            <p class="machine">12 - 42 - 7 - 28 - 2</p>        
+        </article>
+        <article>
+            <h3 class="game">Fair Chance</h3>
+            <p class="winning">73 - 1 - 59 - 38 - 88</p>
+            <p class="machine">22 - 79 - 63 - 78 - 13</p>        
+        </article>
+        <article>
+            <h3 class="game">Diamond</h3>
+            <p class="winning">10 - 23 - 13 - 18 - 75</p>
+            <p class="machine">55 - 28 - 73 - 4 - 20</p>        
+        </article>
+        <article>
+            <h3 class="game">International</h3>
+            <p class="winning">84 - 64 - 38 - 20 - 69</p>
+            <p class="machine">47 - 36 - 10 - 46 - 15</p>        
+        </article>
+        <article>
+            <h3 class="game">Fortune</h3>
+            <p class="winning">7 - 30 - 33 - 48 - 76</p>
+            <p class="machine">65 - 22 - 67 - 81 - 11</p>        
+        </article>
+        <article>
+            <h3 class="game">Bingo</h3>
+            <p class="winning">58 - 30 - 9 - 44 - 78</p>
+            <p class="machine">28 - 40 - 20 - 48 - 52</p>        
+        </article>
+    </section>
 
     </div>
     
