--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,40 +179,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">wednesday 3/1/2023</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">72 - 77 - 56 - 62 - 49</p>
-                <p class="machine">16 - 5 - 65 - 30 - 12</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">63 - 23 - 53 - 40 - 77</p>
-                <p class="machine">86 - 47 - 35 - 22 - 75</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">65 - 63 - 3 - 35 - 12</p>
-                <p class="machine">57 - 4 - 56 - 8 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">2 - 14 - 35 - 84 - 23</p>
-                <p class="machine">5 - 22 - 9 - 44 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">29 - 14 - 53 - 61 - 85</p>
-                <p class="machine">46 - 38 - 80 - 86 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">7 - 18 - 39 - 75 - 61</p>
-                <p class="machine">14 - 25 - 58 - 60 - 82</p>        
-            </article>
-        </section>
-
-        <section>
         <h2 class="date">thursday 4/1/2024</h2>
         <article>
             <h3 class="game">People</h3>
@@ -243,6 +209,40 @@
             <h3 class="game">Bingo</h3>
             <p class="winning">58 - 30 - 9 - 44 - 78</p>
             <p class="machine">28 - 40 - 20 - 48 - 52</p>        
+        </article>
+    </section>
+
+    <section aria-label="yesterday result">
+        <h2 class="date">friday 5/1/2024</h2>
+        <article>
+            <h3 class="game">Royal</h3>
+            <p class="winning">74 - 75 - 86 - 40 - 62</p>
+            <p class="machine">24 - 46 - 60 - 9 - 33</p>        
+        </article>
+        <article>
+            <h3 class="game">Metro</h3>
+            <p class="winning">50 - 9 - 84 - 83 - 70</p>
+            <p class="machine">14 - 77 - 85 - 8 - 48</p>        
+        </article>
+        <article>
+            <h3 class="game">Gold</h3>
+            <p class="winning">12 - 73 - 19 - 65 - 59</p>
+            <p class="machine">44 - 27 - 78 - 29 - 76</p>        
+        </article>
+        <article>
+            <h3 class="game">Jackpot</h3>
+            <p class="winning">79 - 23 - 39 - 48 - 17</p>
+            <p class="machine">53 - 49 - 88 - 5 - 78</p>        
+        </article>
+        <article>
+            <h3 class="game">Bonanza</h3>
+            <p class="winning">78 - 46 - 56 - 73 - 37</p>
+            <p class="machine">71 - 30 - 82 - 89 - 24</p>        
+        </article>
+        <article>
+            <h3 class="game">vag</h3>
+            <p class="winning">38 - 52 - 68 - 29 - 67</p>
+            <p class="machine">19 - 76 - 50 - 37 - 66</p>        
         </article>
     </section>
 
