--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Visual Lotto Board | Baba Ijebu and Lotto result, yesterday and past results</title>
-        <meta name="description" content="Hologuti Business Centre's visual lotto board is a website for viewing Baba Ijebu and premier lotto last results">
+        <meta name="description" content="Visual Lotto Board is a webpage that contains Past and Up-to-date results of Premier lotto, Baba Ijebu and Ghana games">
 
         <!-- Meta Pixel Code -->
         <script>
