--- a/GAMES/1Royal.html
+++ b/GAMES/1Royal.html
@@ -703,21 +703,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">1</td>
-                    <td class="days"><small>mon 1st Jan</small></td>
+                    <td class="days"><small>fri 5th Jan</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">74</td>
+                    <td class="winning">75</td>
+                    <td class="winning">86</td>
+                    <td class="winning">40</td>
+                    <td class="winning" id="lbw">62</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">24</td>
+                    <td class="machine">46</td>
+                    <td class="machine">60</td>
+                    <td class="machine">9</td>
+                    <td class="machine" id="lbm">33</td>
                 </tr>
             </tbody>
 
