--- a/GAMES/23Bonanza.html
+++ b/GAMES/23Bonanza.html
@@ -339,21 +339,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">1</td>
-                    <td class="days"><small>mon 1st Jan</small></td>
+                    <td class="days"><small>5th Jan</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">78</td>
+                    <td class="winning">46</td>
+                    <td class="winning">56</td>
+                    <td class="winning">73</td>
+                    <td class="winning" id="lbw">37</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">71</td>
+                    <td class="machine">30</td>
+                    <td class="machine">82</td>
+                    <td class="machine">89</td>
+                    <td class="machine" id="lbm">24</td>
                 </tr>
             </tbody>
 
