--- a/GAMES/25National.html
+++ b/GAMES/25National.html
@@ -338,21 +338,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">1</td>
-                    <td class="days"><small>mon 1st Jan</small></td>
+                    <td class="days"><small>6th Jan</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">58</td>
+                    <td class="winning">88</td>
+                    <td class="winning">86</td>
+                    <td class="winning">76</td>
+                    <td class="winning" id="lbw">69</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">71</td>
+                    <td class="machine">85</td>
+                    <td class="machine">26</td>
+                    <td class="machine">61</td>
+                    <td class="machine" id="lbm">3</td>
                 </tr>
             </tbody>
 
