--- a/GAMES/24King.html
+++ b/GAMES/24King.html
@@ -339,21 +339,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">1</td>
-                    <td class="days"><small>mon 1st Jan</small></td>
+                    <td class="days"><small>sat 6th Jan</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">85</td>
+                    <td class="winning">55</td>
+                    <td class="winning">87</td>
+                    <td class="winning">21</td>
+                    <td class="winning" id="lbw">63</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">41</td>
+                    <td class="machine">84</td>
+                    <td class="machine">86</td>
+                    <td class="machine">43</td>
+                    <td class="machine" id="lbm">12</td>
                 </tr>
             </tbody>
 
