--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,40 +179,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-        <h2 class="date">thursday 4/1/2024</h2>
-        <article>
-            <h3 class="game">People</h3>
-            <p class="winning">59 - 32 - 44 - 20 - 5</p>
-            <p class="machine">12 - 42 - 7 - 28 - 2</p>        
-        </article>
-        <article>
-            <h3 class="game">Fair Chance</h3>
-            <p class="winning">73 - 1 - 59 - 38 - 88</p>
-            <p class="machine">22 - 79 - 63 - 78 - 13</p>        
-        </article>
-        <article>
-            <h3 class="game">Diamond</h3>
-            <p class="winning">10 - 23 - 13 - 18 - 75</p>
-            <p class="machine">55 - 28 - 73 - 4 - 20</p>        
-        </article>
-        <article>
-            <h3 class="game">International</h3>
-            <p class="winning">84 - 64 - 38 - 20 - 69</p>
-            <p class="machine">47 - 36 - 10 - 46 - 15</p>        
-        </article>
-        <article>
-            <h3 class="game">Fortune</h3>
-            <p class="winning">7 - 30 - 33 - 48 - 76</p>
-            <p class="machine">65 - 22 - 67 - 81 - 11</p>        
-        </article>
-        <article>
-            <h3 class="game">Bingo</h3>
-            <p class="winning">58 - 30 - 9 - 44 - 78</p>
-            <p class="machine">28 - 40 - 20 - 48 - 52</p>        
-        </article>
-    </section>
-
-    <section aria-label="yesterday result">
         <h2 class="date">friday 5/1/2024</h2>
         <article>
             <h3 class="game">Royal</h3>
@@ -246,6 +212,40 @@
         </article>
     </section>
 
+
+    <section aria-label="yesterday result">
+        <h2 class="date">saturday 6/1/2024</h2>
+        <article>
+            <h3 class="game">Premier King</h3>
+            <p class="winning">85 - 55 - 87 - 21 - 63</p>
+            <p class="machine">41 - 84 - 86 - 43 - 12</p>        
+        </article>
+        <article>
+            <h3 class="game">Super</h3>
+            <p class="winning">78 - 2 - 63 - 46 - 52</p>
+            <p class="machine">65 - 18 - 84 - 71 - 25</p>        
+        </article>
+        <article>
+            <h3 class="game">Club Master</h3>
+            <p class="winning">35 - 90 - 51 - 82 - 28</p>
+            <p class="machine">4 - 40 - 16 - 75 - 69</p>        
+        </article>
+        <article>
+            <h3 class="game">06</h3>
+            <p class="winning">79 - 44 - 4 - 49 - 76</p>
+            <p class="machine">1 - 35 - 64 - 56 - 19</p>        
+        </article>
+        <article>
+            <h3 class="game">National</h3>
+            <p class="winning">58 - 88 - 86 - 76 - 69</p>
+            <p class="machine">71 - 85 - 26 - 61 - 3</p>        
+        </article>
+        <article>
+            <h3 class="game">Fair Chance</h3>
+            <p class="winning">48 - 7 - 25 - 83 - 13</p>
+            <p class="machine">88 - 1 - 61 - 60 - 42</p>        
+        </article>
+    </section>
     </div>
     
     <div class="gameList">
