--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </section>
             <aside class="classification-wrapper" id="dragClassification" draggable="true" >
                 <!-- <a href="classification.html" class="counterpart">Click to View in Main Page</a>  -->
-                <iframe src="classification.html" class="classification"  id="dis"></iframe>
+                <iframe title="numbers classification chart" src="classification.html" class="classification"  id="dis"></iframe>
             </aside> 
             <aside  class="disclaimer">
                 <p><strong>Disclaimer</strong></p> 
