--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Result | Baba Ijebu</title>
 
+    <link rel="canonical" href="https://vlb.hologutibusinesscentre.com/GAMES/dailyResult">
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
     <style>
         header {
@@ -178,42 +180,43 @@
         </nav>
     </header>
     <div class="gameResults">
+            <section aria-label="yesterday result">
+                <h2 class="date">sunday 7/1/2024</h2>
+                <article>
+                    <h3 class="game">Royal</h3>
+                    <p class="winning">42 - 67 - 83 - 61 - 39</p>
+                    <p class="machine">85 - 16 - 43 - 9 - 63</p>        
+                </article>
+                <article>
+                    <h3 class="game">mark ii</h3>
+                    <p class="winning">77 - 84 - 87 - 60 - 30</p>
+                    <p class="machine">25 - 38 - 54 - 89 - 37</p>        
+                </article>
+                <article>
+                    <h3 class="game">Enugu</h3>
+                    <p class="winning">74 - 75 - 89 - 24 - 77</p>
+                    <p class="machine">72 - 3 - 66 - 41 - 10</p>        
+                </article>
+                <article>
+                    <h3 class="game">Aseda</h3>
+                    <p class="winning">29 - 55 - 10 - 15 - 67</p>
+                    <p class="machine">12 - 42 - 85 - 32 - 9</p>        
+                </article>
+                <article>
+                    <h3 class="game">lucky</h3>
+                    <p class="winning">81 - 80 - 53 - 40 - 69</p>
+                    <p class="machine">17 - 24 - 73 - 55 - 1</p>        
+                </article>
+                <article>
+                    <h3 class="game">Tota</h3>
+                    <p class="winning">41 - 40 - 65 - 63 - 7</p>
+                    <p class="machine">47 - 11 - 69 - 1 - 68</p>        
+                </article>
+            </section>
+    
+
+
         <section aria-label="two days ago result">
-        <h2 class="date">friday 5/1/2024</h2>
-        <article>
-            <h3 class="game">Royal</h3>
-            <p class="winning">74 - 75 - 86 - 40 - 62</p>
-            <p class="machine">24 - 46 - 60 - 9 - 33</p>        
-        </article>
-        <article>
-            <h3 class="game">Metro</h3>
-            <p class="winning">50 - 9 - 84 - 83 - 70</p>
-            <p class="machine">14 - 77 - 85 - 8 - 48</p>        
-        </article>
-        <article>
-            <h3 class="game">Gold</h3>
-            <p class="winning">12 - 73 - 19 - 65 - 59</p>
-            <p class="machine">44 - 27 - 78 - 29 - 76</p>        
-        </article>
-        <article>
-            <h3 class="game">Jackpot</h3>
-            <p class="winning">79 - 23 - 39 - 48 - 17</p>
-            <p class="machine">53 - 49 - 88 - 5 - 78</p>        
-        </article>
-        <article>
-            <h3 class="game">Bonanza</h3>
-            <p class="winning">78 - 46 - 56 - 73 - 37</p>
-            <p class="machine">71 - 30 - 82 - 89 - 24</p>        
-        </article>
-        <article>
-            <h3 class="game">vag</h3>
-            <p class="winning">38 - 52 - 68 - 29 - 67</p>
-            <p class="machine">19 - 76 - 50 - 37 - 66</p>        
-        </article>
-    </section>
-
-
-    <section aria-label="yesterday result">
         <h2 class="date">saturday 6/1/2024</h2>
         <article>
             <h3 class="game">Premier King</h3>
