--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header>
             <nav>
                 <ul>
-                    <li class="home"><a href="#">HOME</a></li>
+                    <li class="home"><a href="#" aria-current="page">HOME</a></li>
                     <li><a href="./GAMES/1Royal.html">Royal</a></li>
                     <li><a href="./GAMES/2Mark-II.html">Mark-II</a> </li>
                     <li><a href="./GAMES/3Enugu.html">Enugu</a></li>
