--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -180,6 +180,40 @@
         </nav>
     </header>
     <div class="gameResults">
+        <section aria-label="Two days age result">
+            <h2 class="date">wednesday 10/1/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">46 - 10 - 40 - 72 - 19</p>
+                <p class="machine">90 - 11 - 85 - 86 - 49</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">60 - 39 - 47 - 82 - 1</p>
+                <p class="machine">53 - 44 - 69 - 11 - 6</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">28 - 90 - 30 - 70 - 14</p>
+                <p class="machine">82 - 85 - 45 - 18 - 75</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">64 - 60 - 2 - 46 - 75</p>
+                <p class="machine">40 - 44 - 36 - 63 - 52</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">40 - 87 - 49 - 15 - 42</p>
+                <p class="machine">50 - 47 - 53 - 46 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">40 - 51 - 69 - 25 - 38</p>
+                <p class="machine">73 - 60 - 56 - 81 - 48</p>        
+            </article>
+        </section>
+
         <section aria-label="yesterday result">
             <h2 class="date">tuesday 9/1/2024</h2>
             <article>
@@ -219,39 +253,7 @@
             </article>
         </section>
 
-        <section aria-label="yesterday result">
-            <h2 class="date">monday 8/1/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">29 - 87 - 30 - 79 - 61</p>
-                <p class="machine">14 - 56 - 73 - 64 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">81 - 89 - 41 - 53 - 12</p>
-                <p class="machine">84 - 17 - 83 - 77 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">88 - 5 - 59 - 22 - 84</p>
-                <p class="machine">9 - 68 - 83 - 27 - 53</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">22 - 23 - 14 - 56 - 3</p>
-                <p class="machine">24 - 77 - 60 - 32 - 78</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">63 - 51 - 24 - 43 - 41</p>
-                <p class="machine">11 - 61 - 69 - 59 - 4</p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-        </section>
+       
 
     </div>
     
