--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -180,6 +180,40 @@
         </nav>
     </header>
     <div class="gameResults">
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 11/1/2024</h2>
+        <article>
+            <h3 class="game">People</h3>
+            <p class="winning">72 - 35 - 31 - 86 - 84</p>
+            <p class="machine">74 - 34 - 63 - 61 - 16</p>        
+        </article>
+        <article>
+            <h3 class="game">Fair Chance</h3>
+            <p class="winning">49 - 3 - 27 - 75 - 35</p>
+            <p class="machine">79 - 87 - 25 - 7 - 42</p>        
+        </article>
+        <article>
+            <h3 class="game">Diamond</h3>
+            <p class="winning">68 - 21 - 6 - 14 - 78</p>
+            <p class="machine">79 - 36 - 57 - 18 - 34</p>        
+        </article>
+        <article>
+            <h3 class="game">International</h3>
+            <p class="winning">83 - 48 - 10 - 14 - 61</p>
+            <p class="machine">76 - 39 - 51 - 67 - 82</p>        
+        </article>
+        <article>
+            <h3 class="game">Fortune</h3>
+            <p class="winning">67 - 82 - 28 - 80 - 20</p>
+            <p class="machine">3 - 85 - 33 - 79 - 47</p>        
+        </article>
+        <article>
+            <h3 class="game">Bingo</h3>
+            <p class="winning">51 - 61 - 7 - 31 - 37</p>
+            <p class="machine">75 - 32 - 79 - 21 - 42</p>        
+        </article> 
+        </section>
+
         <section aria-label="Two days age result">
             <h2 class="date">wednesday 10/1/2024</h2>
             <article>
@@ -211,45 +245,6 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">40 - 51 - 69 - 25 - 38</p>
                 <p class="machine">73 - 60 - 56 - 81 - 48</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
-            <h2 class="date">tuesday 9/1/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">63 - 50 - 70 - 49 - 73</p>
-                <p class="machine">48 - 46 - 7 - 35 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">74 - 57 - 26 - 11 - 28</p>
-                <p class="machine">77 - 34 - 23 - 70 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">22 - 21 - 55 - 72 - 37</p>
-                <p class="machine">52 - 3 - 19 - 80 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">50 - 62 - 21 - 31 - 19</p>
-                <p class="machine">28 - 72 - 52 - 88 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">80 - 17 - 1 - 56 - 31</p>
-                <p class="machine">65 - 88 - 85 - 40 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">lucky G</h3>
-                <p class="winning">45 - 11 - 23 - 30 - 77</p>
-                <p class="machine">90 - 38 - 41 - 86 - 57</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">82 - 15 - 60 - 71 - 29</p>
-                <p class="machine">28 - 75 - 2 - 34 - 81</p>        
             </article>
         </section>
 
